--- a/contenedor/App1/templates/Index.html
+++ b/contenedor/App1/templates/Index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller</title>
+    <title>Taller django</title>
     <link rel="stylesheet" href="{% static "estilos.css" %}">
     <!-- Necesitas {% static "" %} para poder cargar un archivo estático-->
 
